@@ -1009,14 +1009,18 @@ sub checkRequiredSystemConfig
 {
     if (isDarwin()) {
         chomp(my $productVersion = `sw_vers -productVersion`);
-        if ($productVersion lt "10.4") {
+        if (eval "v$productVersion" lt v10.4) {
             print "*************************************************************\n";
             print "Mac OS X Version 10.4.0 or later is required to build WebKit.\n";
             print "You have " . $productVersion . ", thus the build will most likely fail.\n";
             print "*************************************************************\n";
         }
-        my $xcodeVersion = `xcodebuild -version`;
-        if ($xcodeVersion !~ /DevToolsCore-(\d+)/ || $1 < 747) {
+        my $xcodebuildVersionOutput = `xcodebuild -version`;
+        my $devToolsCoreVersion = ($xcodebuildVersionOutput =~ /DevToolsCore-(\d+)/) ? $1 : undef;
+        my $xcodeVersion = ($xcodebuildVersionOutput =~ /Xcode ([0-9](\.[0-9]+)*)/) ? $1 : undef;
+        if (!$devToolsCoreVersion && !$xcodeVersion
+            || $devToolsCoreVersion && $devToolsCoreVersion < 747
+            || $xcodeVersion && eval "v$xcodeVersion" lt v2.3) {
             print "*************************************************************\n";
             print "Xcode Version 2.3 or later is required to build WebKit.\n";
             print "You have an earlier version of Xcode, thus the build will\n";
