@@ -1,3 +1,15 @@
+2011-01-28  David Kilzer  <ddkilzer@apple.com>
+
+        <rdar://problem/8930699> build-webkit gives a bogus warning with newer versions of Xcode 
+
+        Reviewed by Mark Rowe.
+
+        * Scripts/webkitdirs.pm:
+        (checkRequiredSystemConfig): Check the Xcode marketing version
+        in addition to the DevCoreTools build version before complaining
+        about an old version of Xcode.  Also make the Mac OS X version
+        check use Perl's built-in version string comparitor.
+
 2011-01-28  Dirk Pranke  <dpranke@chromium.org>
 
         Unreviewed, build fix.
